<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewmodel"
            type="be.hogent.kolveniershof.viewmodels.DayViewModel" />
    </data>
    
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DayFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="0dp"
            android:clipToPadding="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-16dp"
                android:layout_marginEnd="-16dp"
                android:background="#33007AEF"
                app:layout_constraintBottom_toTopOf="@+id/imageMorningBus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/moon_symbol"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Zaterdag 05/10"
                    android:textSize="@dimen/font_size_large"
                    app:layout_constraintBottom_toTopOf="@+id/imageView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageMorningBus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/activity_icon_content_description"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageMorningCoffee"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/activity_icon_content_description"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toEndOf="@+id/imageMorningBus"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                tools:src="@tools:sample/avatars" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageMorningBus" />

            <ImageView
                android:id="@+id/imageAmActivity1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/activity_icon_content_description"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                tools:src="@tools:sample/avatars[3]" />

            <TextView
                android:id="@+id/textAmActivity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="66dp"
                android:text="textAmActivity1"
                app:layout_constraintBottom_toBottomOf="@+id/imageAmActivity1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageAmActivity1"
                app:layout_constraintTop_toTopOf="@+id/imageAmActivity1"
                tools:ignore="HardcodedText" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAmMentor1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/mentor_image_content_description"
                android:src="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textAmActivity1"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <ImageView
                android:id="@+id/imageAmActivity2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/activity_icon_content_description"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageAmActivity1"
                tools:src="@tools:sample/avatars[3]" />

            <TextView
                android:id="@+id/textAmActivity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="66dp"
                android:text="textAmActivity2"
                app:layout_constraintBottom_toBottomOf="@+id/imageAmActivity2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageAmActivity2"
                app:layout_constraintTop_toTopOf="@+id/imageAmActivity2"
                tools:ignore="HardcodedText" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAmMentor2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/mentor_image_content_description"
                android:src="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textAmActivity2"
                app:layout_constraintTop_toBottomOf="@+id/imageAmMentor1" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageAmActivity2" />

            <ImageView
                android:id="@+id/imageLunch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/lunch_icon_content_description"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                tools:src="@tools:sample/avatars[3]" />

            <TextView
                android:id="@+id/textLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="textLunch"
                app:layout_constraintBottom_toBottomOf="@+id/imageLunch"
                app:layout_constraintStart_toEndOf="@+id/imageLunch"
                app:layout_constraintTop_toTopOf="@+id/imageLunch"
                tools:ignore="HardcodedText" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageLunch" />

            <ImageView
                android:id="@+id/imagePmActivity1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/activity_icon_content_description"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                tools:src="@tools:sample/avatars[3]" />

            <TextView
                android:id="@+id/textPmActivity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="66dp"
                android:text="textPmActivity1"
                app:layout_constraintBottom_toBottomOf="@+id/imagePmActivity1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imagePmActivity1"
                app:layout_constraintTop_toTopOf="@+id/imagePmActivity1"
                tools:ignore="HardcodedText" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagePmMentor1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/mentor_image_content_description"
                android:src="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textPmActivity1"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <ImageView
                android:id="@+id/imagePmActivity2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/activity_icon_content_description"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagePmActivity1"
                tools:src="@tools:sample/avatars[3]" />

            <TextView
                android:id="@+id/textPmActivity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="66dp"
                android:text="textPmActivity2"
                app:layout_constraintBottom_toBottomOf="@+id/imagePmActivity2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imagePmActivity2"
                app:layout_constraintTop_toTopOf="@+id/imagePmActivity2"
                tools:ignore="HardcodedText" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagePmMentor2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/mentor_image_content_description"
                android:src="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textPmActivity2"
                app:layout_constraintTop_toBottomOf="@+id/imagePmMentor1" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagePmActivity2" />

            <ImageView
                android:id="@+id/imageEveningBus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/activity_icon_content_description"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider4"
                tools:src="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
</layout>